# rs-perspective

./: .gitignore  Cargo.toml  DIRTREE.txt  README.md  docker-compose.yml  scaffhold_from_tree.py
.vendor/perspective/: perspective-dev-client-4.2.0.tgz  perspective-dev-viewer-4.2.0.tgz  perspective-dev-viewer-datagrid-4.2.0.tgz
.vendor/perspective/client/package/: package.json
.vendor/perspective/client/package/src/ts/ts-rs/: ColumnType.ts  ColumnWindow.ts  DeleteOptions.ts  (+14 more)
.vendor/perspective/viewer-datagrid/package/: package.json
.vendor/perspective/viewer/package/: package.json
docs/: README.md
docs/phases/: PHASE_0_FOUNDATION.md  PHASE_1_TICKS_NATS.md  PHASE_2_LIVE_TABLES.md  PHASE_3_POLISH.md
producer/: Cargo.toml  Dockerfile
producer/src/: lib.rs  main.rs  tick.rs
scripts/: vendor_perspective_assets.sh  verify_perspective_assets.sh
server-rs/: Cargo.toml  Dockerfile
server-rs/src/: app.rs  config.rs  handlers.rs  lib.rs  main.rs  nats_consumer.rs  perspective.rs  ticks.rs
server-rs/src/handlers/: health.rs  mod.rs  ws_info.rs
server-rs/src/ingest/: mod.rs  nats_consumer.rs
server-rs/src/models/: mod.rs  row.rs  tick.rs
server-rs/src/pipeline/: backpressure.rs  batcher.rs  flush_policy.rs  mod.rs
server-rs/src/sinks/: mod.rs  perspective.rs
server-rs/src/transforms/: demo_rows.rs  mod.rs
server-rs/static/: index.css  index.html  streaming.js  streaming[DEFAULT].js
server-rs/static/js/: perspective-client.js
server-rs/static/perspective/client/esm/: perspective.js
server-rs/static/perspective/viewer-datagrid/cdn/: perspective-viewer-datagrid.js
server-rs/static/perspective/viewer/cdn/: perspective-viewer.js
server-rs/static/perspective/viewer/wasm/: perspective-viewer.js
server-rs/tests/: health.rs  nats_integration.rs  pipeline_integration.rs  static_assets.rs  websocket.rs
(+27 files in other folders)
