[package]
name = "producer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.39.0"
chrono = { version = "0.4.41", features = ["serde", "clock"] }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }