[package]
name = "server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.39.0"
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "net"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures-util = "0.3.31"
perspective = { version = "=4.2.0", features = ["tokio"] }

[dev-dependencies]
http-body-util = "0.1.3"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }
testcontainers = "0.27.1"